--- a/BandhanApp/BandhanApp/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BandhanApp/BandhanApp/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,10 +8,74 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
             <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Name" class="form-control" autocomplete="name" aria-required="true" placeholder="Enter name" />
+                <label asp-for="Input.Name">Name</label>
+                <span asp-validation-for="Input.Name" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.BirthDate" class="form-control" autocomplete="birthdate" aria-required="true" placeholder="Enter birthdate" />
+                <label asp-for="Input.BirthDate">BirthDate</label>
+                <span asp-validation-for="Input.BirthDate" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Age" class="form-control" autocomplete="age" aria-required="true" placeholder="Enter Age" />
+                <label asp-for="Input.Age">Age</label>
+                <span asp-validation-for="Input.Age" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.City" class="form-control" autocomplete="city" aria-required="true" placeholder="Enter City" />
+                <label asp-for="Input.City">City</label>
+                <span asp-validation-for="Input.City" class="text-danger"></span>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Caste" class="form-control" autocomplete="caste" aria-required="true" placeholder="Enter Caste" />
+                <label asp-for="Input.Caste">Caste</label>
+                <span asp-validation-for="Input.Caste" class="text-danger"></span>
+            </div>
+
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Gender" class="form-control" autocomplete="gender" aria-required="true" placeholder="Enter Gender" />
+                <label asp-for="Input.Gender">Gender</label>
+                <span asp-validation-for="Input.Gender" class="text-danger"></span>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.MaritialStatus" class="form-control" autocomplete="maritialStatus" aria-required="true" placeholder="Enter MaritialStatus" />
+                <label asp-for="Input.MaritialStatus">MaritialStatus</label>
+                <span asp-validation-for="Input.MaritialStatus" class="text-danger"></span>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Religion" class="form-control" autocomplete="religion" aria-required="true" placeholder="Enter Religion" />
+                <label asp-for="Input.Religion">Religion</label>
+                <span asp-validation-for="Input.Religion" class="text-danger"></span>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Occupation" class="form-control" autocomplete="occupation" aria-required="true" placeholder="Enter Occupation" />
+                <label asp-for="Input.Occupation">Occupation</label>
+                <span asp-validation-for="Input.Occupation" class="text-danger"></span>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Salary" class="form-control" autocomplete="salary" aria-required="true" placeholder="Enter Salary" />
+                <label asp-for="Input.Salary">Salary</label>
+                <span asp-validation-for="Input.Salary" class="text-danger"></span>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.ImagePath" class="form-control" autocomplete="imagePath" aria-required="true" placeholder="Enter ImagePath" />
+                <label asp-for="Input.ImagePath">Salary</label>
+                <span asp-validation-for="Input.ImagePath" class="text-danger"></span>
+            </div>
+    
             <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                 <label asp-for="Input.Email">Email</label>
